// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute mco2 endpoint should return success 1`] = `
{
  "data": {
    "result": 3041044,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 3041044,
  "statusCode": 200,
}
`;

exports[`execute stbt endpoint should return error when ripcord true 1`] = `
{
  "error": {
    "errorResponse": {
      "ripcord": true,
      "ripcordDetails": [
        "Balances",
      ],
    },
    "feedID": "{"data":{"endpoint":"stbt"}}",
    "message": "Ripcord indicator true. Details: Balances",
    "name": "AdapterError",
  },
  "jobRunID": "1",
  "status": "errored",
  "statusCode": 502,
}
`;

exports[`execute stbt endpoint should return success 1`] = `
{
  "data": {
    "result": 72178807.56,
  },
  "jobRunID": "1",
  "providerStatusCode": 200,
  "result": 72178807.56,
  "statusCode": 200,
}
`;
